--- a/WeatherAPI/index.html
+++ b/WeatherAPI/index.html
@@ -1,1 +1,24 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Search Weather |Weather API</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h1>Search Temperature of Cities</h1>
+    <div class="input">
+        <input type="text" class="inputValue" placeholder="Enter a City">
+        <input type="submit" value="Submit" class="button">
+    </div>
+    <div class="display">
+        <h2 class="name"></h2>
+        <h2 class="temp"></h2>
+        <h3 class="desc"></h3>
+    </div>
+<script src="script.js"></script>
+</body>
+</html>
